<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:paddingTop="20dp"
    android:gravity="center"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/light_grey">

        <ImageView
            android:id="@+id/iv_new_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_add_image" />

        <ProgressBar
            android:id="@+id/pb_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="25dp"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:theme="@style/ProgressBar" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/new_message_title"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:textAppearanceMedium"
            android:inputType="textCapSentences"
            android:scrollbars="horizontal"
            android:scrollbarThumbHorizontal="@drawable/scrollbar_horizontal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_message_description"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3"
            android:textAppearance="?android:textAppearanceMedium"
            android:textSize="16sp"
            android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
            android:scrollbars="vertical"
            android:scrollbarThumbVertical="@drawable/scrollbar_vertical" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/ner_message_position"
        android:textColor="@color/grey"
        android:textAppearance="?android:textAppearanceMedium"/>

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/iv_add_position"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/light_grey"
        android:padding="10dp"
        android:src="@drawable/ic_add_position"/>

    <Button
        android:id="@+id/bn_new_message_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:text="@string/new_message_send" />

</LinearLayout>