...
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login_sign_in"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_register"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceMedium"
...
